add intersection observer polyfill for docs

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
             <strong>We're sorry but vue-lazyload-video doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
         </noscript>
         <div id="app"></div>
+        <script src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script>
+
         <!-- built files will be auto injected -->
     </body>
 </html>
